src/parser.output
Nonterminals useless in grammar

    functions


Terminals unused in grammar

    STRING_LITERAL
    DEC_OP


Rules useless in grammar

  128 functions: function_definition
  129          | functions function_definition


Rules useless in parser due to conflicts

   90 unary_expression: unary_expression INC_OP


State 37 conflicts: 6 reduce/reduce
State 38 conflicts: 6 reduce/reduce
State 39 conflicts: 6 reduce/reduce
State 116 conflicts: 26 reduce/reduce
State 121 conflicts: 1 shift/reduce
State 153 conflicts: 25 shift/reduce
State 196 conflicts: 25 shift/reduce
State 206 conflicts: 6 reduce/reduce
State 220 conflicts: 1 shift/reduce


Grammar

    0 $accept: top $end

    1 top: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | function_declarator

    6 function_definition: type_specifier direct_declarator brackets
    7                    | type_specifier direct_declarator '(' parameter_list ')' brackets
    8                    | type_specifier direct_declarator '(' ')' brackets

    9 function_declarator: type_specifier direct_declarator '(' ')' ';'
   10                    | type_specifier direct_declarator '(' parameter_list ')' ';'
   11                    | type_specifier direct_declarator '[' INT_LITERAL ']' ';'
   12                    | enum_specifier

   13 type_specifier: INT
   14               | FLOAT
   15               | CHAR
   16               | UNSIGNED
   17               | DOUBLE

   18 direct_declarator: IDENTIFIER

   19 parameter_list: parameter_declaration
   20               | parameter_list ',' parameter_declaration

   21 brackets: '{' compound_statement '}'

   22 compound_statement: statement
   23                   | compound_statement statement
   24                   | compound_statement '{' compound_statement '}'

   25 statement: skip_statement
   26          | expression_statement
   27          | if_statement
   28          | while_statement
   29          | for_statement
   30          | case_statement
   31          | switch_statement
   32          | break

   33 statementCASE: skip_statement
   34              | expression_statement
   35              | if_statement
   36              | while_statement
   37              | for_statement
   38              | switch_statement
   39              | break

   40 compound_statementCASE: statementCASE
   41                       | compound_statementCASE statementCASE
   42                       | compound_statementCASE '{' compound_statementCASE '}'

   43 if_statement: IF '(' expression ')' '{' compound_statement '}'
   44             | IF '(' expression ')' '{' compound_statement '}' ELSE '{' compound_statement '}'

   45 while_statement: WHILE '(' expression ')' '{' compound_statement '}'
   46                | DO '{' compound_statement '}' WHILE '(' expression ')' ';'
   47                | WHILE '(' expression ')' '{' '}'

   48 for_statement: FOR '(' expression_statement expression_statement expression ')' '{' compound_statement '}'
   49              | FOR '(' expression_statement expression_statement expression ')' '{' '}'

   50 skip_statement: RETURN expression_statement

   51 switch_statement: SWITCH '(' expression ')' brackets

   52 case_statement: CASE expression ':' compound_statementCASE
   53               | DEFAULT ':' compound_statementCASE

   54 break: BREAK ';'

   55 expression_statement: ';'
   56                     | expression ';'

   57 expression: direct_declarator '=' expression
   58           | INT_LITERAL
   59           | FLOAT_LITERAL
   60           | CHAR_LITERAL
   61           | type_specifier direct_declarator
   62           | conditional_expression
   63           | function_call
   64           | direct_declarator
   65           | type_specifier direct_declarator '=' logical_or_expression
   66           | type_specifier direct_declarator '[' INT_LITERAL ']'
   67           | direct_declarator '[' expression ']' '=' logical_or_expression
   68           | direct_declarator '[' expression ']'
   69           | sizeOf

   70 enum_specifier: ENUM '{' enumerator_list '}' ';'
   71               | ENUM IDENTIFIER '{' enumerator_list '}' ';'
   72               | ENUM IDENTIFIER

   73 enumerator_list: enumerator
   74                | enumerator_list ',' enumerator

   75 enumerator: direct_declarator
   76           | direct_declarator '=' expression

   77 sizeOf: SIZEOF '(' direct_declarator ')'
   78       | SIZEOF '(' type_specifier ')'

   79 primary_expression_list: primary_expression
   80                        | primary_expression_list ',' primary_expression

   81 function_call: IDENTIFIER '(' ')'
   82              | IDENTIFIER '(' primary_expression_list ')'

   83 parameter_declaration: type_specifier direct_declarator

   84 primary_expression: INT_LITERAL
   85                   | FLOAT_LITERAL
   86                   | IDENTIFIER
   87                   | direct_declarator '[' expression ']'
   88                   | '(' expression ')'

   89 unary_expression: unary_expression INC_OP
   90                 | unary_expression INC_OP
   91                 | unary_operator unary_expression
   92                 | primary_expression

   93 unary_operator: '&'
   94               | '-'
   95               | '+'
   96               | '!'
   97               | '*'

   98 multiplicative_expression: unary_expression
   99                          | multiplicative_expression '*' unary_expression
  100                          | multiplicative_expression '/' unary_expression
  101                          | multiplicative_expression '%' unary_expression

  102 additive_expression: multiplicative_expression
  103                    | additive_expression '+' multiplicative_expression
  104                    | additive_expression '-' multiplicative_expression

  105 shift_expression: additive_expression
  106                 | shift_expression LEFT_OP additive_expression
  107                 | shift_expression RIGHT_OP additive_expression

  108 relational_expression: shift_expression
  109                      | relational_expression '<' shift_expression
  110                      | relational_expression '>' shift_expression
  111                      | relational_expression LE_OP shift_expression
  112                      | relational_expression GE_OP shift_expression

  113 equality_expression: relational_expression
  114                    | equality_expression NEQ_OP relational_expression
  115                    | equality_expression EQ_OP relational_expression

  116 and_expression: equality_expression
  117               | and_expression '&' equality_expression

  118 exclusive_or_expression: and_expression
  119                        | exclusive_or_expression '^' and_expression

  120 inclusive_or_expression: exclusive_or_expression
  121                        | inclusive_or_expression '|' exclusive_or_expression

  122 logical_and_expression: inclusive_or_expression
  123                       | logical_and_expression AND_OP inclusive_or_expression

  124 logical_or_expression: logical_and_expression
  125                      | logical_or_expression OR_OP logical_and_expression

  126 conditional_expression: logical_or_expression
  127                       | conditional_expression '?' compound_statement ':' compound_statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 96
    '%' (37) 101
    '&' (38) 93 117
    '(' (40) 7 8 9 10 43 44 45 46 47 48 49 51 77 78 81 82 88
    ')' (41) 7 8 9 10 43 44 45 46 47 48 49 51 77 78 81 82 88
    '*' (42) 97 99
    '+' (43) 95 103
    ',' (44) 20 74 80
    '-' (45) 94 104
    '/' (47) 100
    ':' (58) 52 53 127
    ';' (59) 9 10 11 46 54 55 56 70 71
    '<' (60) 109
    '=' (61) 57 65 67 76
    '>' (62) 110
    '?' (63) 127
    '[' (91) 11 66 67 68 87
    ']' (93) 11 66 67 68 87
    '^' (94) 119
    '{' (123) 21 24 42 43 44 45 46 47 48 49 70 71
    '|' (124) 121
    '}' (125) 21 24 42 43 44 45 46 47 48 49 70 71
    error (256)
    IDENTIFIER <string> (258) 18 71 72 81 82 86
    INT_LITERAL <number> (259) 11 58 66 84
    STRING_LITERAL <string> (260)
    FLOAT_LITERAL <number> (261) 59 85
    CHAR_LITERAL <string> (262) 60
    INC_OP (263) 89 90
    LEFT_OP (264) 106
    RIGHT_OP (265) 107
    LE_OP (266) 111
    GE_OP (267) 112
    EQ_OP (268) 115
    NEQ_OP (269) 114
    AND_OP (270) 123
    OR_OP (271) 125
    SIZEOF (272) 77 78
    DEC_OP (273)
    CHAR (274) 15
    INT (275) 13
    FLOAT (276) 14
    UNSIGNED (277) 16
    ENUM (278) 70 71 72
    DOUBLE (279) 17
    CASE (280) 52
    DEFAULT (281) 53
    IF (282) 43 44
    ELSE (283) 44
    SWITCH (284) 51
    WHILE (285) 45 46 47
    DO (286) 46
    FOR (287) 48 49
    BREAK (288) 54
    RETURN (289) 50


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    top <expr> (58)
        on left: 1
        on right: 0
    translation_unit <extDec> (59)
        on left: 2 3
        on right: 1 3
    external_declaration <expr> (60)
        on left: 4 5
        on right: 2 3
    function_definition <expr> (61)
        on left: 6 7 8
        on right: 4
    function_declarator <expr> (62)
        on left: 9 10 11 12
        on right: 5
    type_specifier <string> (63)
        on left: 13 14 15 16 17
        on right: 6 7 8 9 10 11 61 65 66 78 83
    direct_declarator <expr> (64)
        on left: 18
        on right: 6 7 8 9 10 11 57 61 64 65 66 67 68 75 76 77 83 87
    parameter_list <paramList> (65)
        on left: 19 20
        on right: 7 10 20
    brackets <expr> (66)
        on left: 21
        on right: 6 7 8 51
    compound_statement <statementList> (67)
        on left: 22 23 24
        on right: 21 23 24 43 44 45 46 48 127
    statement <expr> (68)
        on left: 25 26 27 28 29 30 31 32
        on right: 22 23
    statementCASE <expr> (69)
        on left: 33 34 35 36 37 38 39
        on right: 40 41
    compound_statementCASE <statementList> (70)
        on left: 40 41 42
        on right: 41 42 52 53
    if_statement <expr> (71)
        on left: 43 44
        on right: 27 35
    while_statement <expr> (72)
        on left: 45 46 47
        on right: 28 36
    for_statement <expr> (73)
        on left: 48 49
        on right: 29 37
    skip_statement <expr> (74)
        on left: 50
        on right: 25 33
    switch_statement <expr> (75)
        on left: 51
        on right: 31 38
    case_statement <expr> (76)
        on left: 52 53
        on right: 30
    break <expr> (77)
        on left: 54
        on right: 32 39
    expression_statement <expr> (78)
        on left: 55 56
        on right: 26 34 48 49 50
    expression <expr> (79)
        on left: 57 58 59 60 61 62 63 64 65 66 67 68 69
        on right: 43 44 45 46 47 48 49 51 52 56 57 67 68 76 87 88
    enum_specifier <expr> (80)
        on left: 70 71 72
        on right: 12
    enumerator_list <enumList> (81)
        on left: 73 74
        on right: 70 71 74
    enumerator <expr> (82)
        on left: 75 76
        on right: 73 74
    sizeOf <expr> (83)
        on left: 77 78
        on right: 69
    primary_expression_list <primList> (84)
        on left: 79 80
        on right: 80 82
    function_call <expr> (85)
        on left: 81 82
        on right: 63
    parameter_declaration <expr> (86)
        on left: 83
        on right: 19 20
    primary_expression <expr> (87)
        on left: 84 85 86 87 88
        on right: 79 80 92
    unary_expression <expr> (88)
        on left: 89 90 91 92
        on right: 89 90 91 98 99 100 101
    unary_operator (89)
        on left: 93 94 95 96 97
        on right: 91
    multiplicative_expression <expr> (90)
        on left: 98 99 100 101
        on right: 99 100 101 102 103 104
    additive_expression <expr> (91)
        on left: 102 103 104
        on right: 103 104 105 106 107
    shift_expression <expr> (92)
        on left: 105 106 107
        on right: 106 107 108 109 110 111 112
    relational_expression <expr> (93)
        on left: 108 109 110 111 112
        on right: 109 110 111 112 113 114 115
    equality_expression <expr> (94)
        on left: 113 114 115
        on right: 114 115 116 117
    and_expression <expr> (95)
        on left: 116 117
        on right: 117 118 119
    exclusive_or_expression <expr> (96)
        on left: 118 119
        on right: 119 120 121
    inclusive_or_expression <expr> (97)
        on left: 120 121
        on right: 121 122 123
    logical_and_expression <expr> (98)
        on left: 122 123
        on right: 123 124 125
    logical_or_expression <expr> (99)
        on left: 124 125
        on right: 65 67 125 126
    conditional_expression <expr> (100)
        on left: 126 127
        on right: 62 127


State 0

    0 $accept: . top $end

    CHAR      shift, and go to state 1
    INT       shift, and go to state 2
    FLOAT     shift, and go to state 3
    UNSIGNED  shift, and go to state 4
    ENUM      shift, and go to state 5
    DOUBLE    shift, and go to state 6

    top                   go to state 7
    translation_unit      go to state 8
    external_declaration  go to state 9
    function_definition   go to state 10
    function_declarator   go to state 11
    type_specifier        go to state 12
    enum_specifier        go to state 13


State 1

   15 type_specifier: CHAR .

    $default  reduce using rule 15 (type_specifier)


State 2

   13 type_specifier: INT .

    $default  reduce using rule 13 (type_specifier)


State 3

   14 type_specifier: FLOAT .

    $default  reduce using rule 14 (type_specifier)


State 4

   16 type_specifier: UNSIGNED .

    $default  reduce using rule 16 (type_specifier)


State 5

   70 enum_specifier: ENUM . '{' enumerator_list '}' ';'
   71               | ENUM . IDENTIFIER '{' enumerator_list '}' ';'
   72               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 14
    '{'         shift, and go to state 15


State 6

   17 type_specifier: DOUBLE .

    $default  reduce using rule 17 (type_specifier)


State 7

    0 $accept: top . $end

    $end  shift, and go to state 16


State 8

    1 top: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    CHAR      shift, and go to state 1
    INT       shift, and go to state 2
    FLOAT     shift, and go to state 3
    UNSIGNED  shift, and go to state 4
    ENUM      shift, and go to state 5
    DOUBLE    shift, and go to state 6

    $default  reduce using rule 1 (top)

    external_declaration  go to state 17
    function_definition   go to state 10
    function_declarator   go to state 11
    type_specifier        go to state 12
    enum_specifier        go to state 13


State 9

    2 translation_unit: external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 10

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


State 11

    5 external_declaration: function_declarator .

    $default  reduce using rule 5 (external_declaration)


State 12

    6 function_definition: type_specifier . direct_declarator brackets
    7                    | type_specifier . direct_declarator '(' parameter_list ')' brackets
    8                    | type_specifier . direct_declarator '(' ')' brackets
    9 function_declarator: type_specifier . direct_declarator '(' ')' ';'
   10                    | type_specifier . direct_declarator '(' parameter_list ')' ';'
   11                    | type_specifier . direct_declarator '[' INT_LITERAL ']' ';'

    IDENTIFIER  shift, and go to state 18

    direct_declarator  go to state 19


State 13

   12 function_declarator: enum_specifier .

    $default  reduce using rule 12 (function_declarator)


State 14

   71 enum_specifier: ENUM IDENTIFIER . '{' enumerator_list '}' ';'
   72               | ENUM IDENTIFIER .

    '{'  shift, and go to state 20

    $default  reduce using rule 72 (enum_specifier)


State 15

   70 enum_specifier: ENUM '{' . enumerator_list '}' ';'

    IDENTIFIER  shift, and go to state 18

    direct_declarator  go to state 21
    enumerator_list    go to state 22
    enumerator         go to state 23


State 16

    0 $accept: top $end .

    $default  accept


State 17

    3 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 3 (translation_unit)


State 18

   18 direct_declarator: IDENTIFIER .

    $default  reduce using rule 18 (direct_declarator)


State 19

    6 function_definition: type_specifier direct_declarator . brackets
    7                    | type_specifier direct_declarator . '(' parameter_list ')' brackets
    8                    | type_specifier direct_declarator . '(' ')' brackets
    9 function_declarator: type_specifier direct_declarator . '(' ')' ';'
   10                    | type_specifier direct_declarator . '(' parameter_list ')' ';'
   11                    | type_specifier direct_declarator . '[' INT_LITERAL ']' ';'

    '('  shift, and go to state 24
    '['  shift, and go to state 25
    '{'  shift, and go to state 26

    brackets  go to state 27


State 20

   71 enum_specifier: ENUM IDENTIFIER '{' . enumerator_list '}' ';'

    IDENTIFIER  shift, and go to state 18

    direct_declarator  go to state 21
    enumerator_list    go to state 28
    enumerator         go to state 23


State 21

   75 enumerator: direct_declarator .
   76           | direct_declarator . '=' expression

    '='  shift, and go to state 29

    $default  reduce using rule 75 (enumerator)


State 22

   70 enum_specifier: ENUM '{' enumerator_list . '}' ';'
   74 enumerator_list: enumerator_list . ',' enumerator

    ','  shift, and go to state 30
    '}'  shift, and go to state 31


State 23

   73 enumerator_list: enumerator .

    $default  reduce using rule 73 (enumerator_list)


State 24

    7 function_definition: type_specifier direct_declarator '(' . parameter_list ')' brackets
    8                    | type_specifier direct_declarator '(' . ')' brackets
    9 function_declarator: type_specifier direct_declarator '(' . ')' ';'
   10                    | type_specifier direct_declarator '(' . parameter_list ')' ';'

    CHAR      shift, and go to state 1
    INT       shift, and go to state 2
    FLOAT     shift, and go to state 3
    UNSIGNED  shift, and go to state 4
    DOUBLE    shift, and go to state 6
    ')'       shift, and go to state 32

    type_specifier         go to state 33
    parameter_list         go to state 34
    parameter_declaration  go to state 35


State 25

   11 function_declarator: type_specifier direct_declarator '[' . INT_LITERAL ']' ';'

    INT_LITERAL  shift, and go to state 36


State 26

   21 brackets: '{' . compound_statement '}'

    IDENTIFIER     shift, and go to state 37
    INT_LITERAL    shift, and go to state 38
    FLOAT_LITERAL  shift, and go to state 39
    CHAR_LITERAL   shift, and go to state 40
    SIZEOF         shift, and go to state 41
    CHAR           shift, and go to state 1
    INT            shift, and go to state 2
    FLOAT          shift, and go to state 3
    UNSIGNED       shift, and go to state 4
    DOUBLE         shift, and go to state 6
    CASE           shift, and go to state 42
    DEFAULT        shift, and go to state 43
    IF             shift, and go to state 44
    SWITCH         shift, and go to state 45
    WHILE          shift, and go to state 46
    DO             shift, and go to state 47
    FOR            shift, and go to state 48
    BREAK          shift, and go to state 49
    RETURN         shift, and go to state 50
    '('            shift, and go to state 51
    ';'            shift, and go to state 52
    '&'            shift, and go to state 53
    '-'            shift, and go to state 54
    '+'            shift, and go to state 55
    '!'            shift, and go to state 56
    '*'            shift, and go to state 57

    type_specifier             go to state 58
    direct_declarator          go to state 59
    compound_statement         go to state 60
    statement                  go to state 61
    if_statement               go to state 62
    while_statement            go to state 63
    for_statement              go to state 64
    skip_statement             go to state 65
    switch_statement           go to state 66
    case_statement             go to state 67
    break                      go to state 68
    expression_statement       go to state 69
    expression                 go to state 70
    sizeOf                     go to state 71
    function_call              go to state 72
    primary_expression         go to state 73
    unary_expression           go to state 74
    unary_operator             go to state 75
    multiplicative_expression  go to state 76
    additive_expression        go to state 77
    shift_expression           go to state 78
    relational_expression      go to state 79
    equality_expression        go to state 80
    and_expression             go to state 81
    exclusive_or_expression    go to state 82
    inclusive_or_expression    go to state 83
    logical_and_expression     go to state 84
    logical_or_expression      go to state 85
    conditional_expression     go to state 86


State 27

    6 function_definition: type_specifier direct_declarator brackets .

    $default  reduce using rule 6 (function_definition)


State 28

   71 enum_specifier: ENUM IDENTIFIER '{' enumerator_list . '}' ';'
   74 enumerator_list: enumerator_list . ',' enumerator

    ','  shift, and go to state 30
    '}'  shift, and go to state 87


State 29

   76 enumerator: direct_declarator '=' . expression

    IDENTIFIER     shift, and go to state 37
    INT_LITERAL    shift, and go to state 38
    FLOAT_LITERAL  shift, and go to state 39
    CHAR_LITERAL   shift, and go to state 40
    SIZEOF         shift, and go to state 41
    CHAR           shift, and go to state 1
    INT            shift, and go to state 2
    FLOAT          shift, and go to state 3
    UNSIGNED       shift, and go to state 4
    DOUBLE         shift, and go to state 6
    '('            shift, and go to state 51
    '&'            shift, and go to state 53
    '-'            shift, and go to state 54
    '+'            shift, and go to state 55
    '!'            shift, and go to state 56
    '*'            shift, and go to state 57

    type_specifier             go to state 58
    direct_declarator          go to state 59
    expression                 go to state 88
    sizeOf                     go to state 71
    function_call              go to state 72
    primary_expression         go to state 73
    unary_expression           go to state 74
    unary_operator             go to state 75
    multiplicative_expression  go to state 76
    additive_expression        go to state 77
    shift_expression           go to state 78
    relational_expression      go to state 79
    equality_expression        go to state 80
    and_expression             go to state 81
    exclusive_or_expression    go to state 82
    inclusive_or_expression    go to state 83
    logical_and_expression     go to state 84
    logical_or_expression      go to state 85
    conditional_expression     go to state 86


State 30

   74 enumerator_list: enumerator_list ',' . enumerator

    IDENTIFIER  shift, and go to state 18

    direct_declarator  go to state 21
    enumerator         go to state 89


State 31

   70 enum_specifier: ENUM '{' enumerator_list '}' . ';'

    ';'  shift, and go to state 90


State 32

    8 function_definition: type_specifier direct_declarator '(' ')' . brackets
    9 function_declarator: type_specifier direct_declarator '(' ')' . ';'

    ';'  shift, and go to state 91
    '{'  shift, and go to state 26

    brackets  go to state 92


State 33

   83 parameter_declaration: type_specifier . direct_declarator

    IDENTIFIER  shift, and go to state 18

    direct_declarator  go to state 93


State 34

    7 function_definition: type_specifier direct_declarator '(' parameter_list . ')' brackets
   10 function_declarator: type_specifier direct_declarator '(' parameter_list . ')' ';'
   20 parameter_list: parameter_list . ',' parameter_declaration

    ')'  shift, and go to state 94
    ','  shift, and go to state 95


State 35

   19 parameter_list: parameter_declaration .

    $default  reduce using rule 19 (parameter_list)


State 36

   11 function_declarator: type_specifier direct_declarator '[' INT_LITERAL . ']' ';'

    ']'  shift, and go to state 96


State 37

   18 direct_declarator: IDENTIFIER .
   81 function_call: IDENTIFIER . '(' ')'
   82              | IDENTIFIER . '(' primary_expression_list ')'
   86 primary_expression: IDENTIFIER .

    '('  shift, and go to state 97

    ')'       reduce using rule 18 (direct_declarator)
    ')'       [reduce using rule 86 (primary_expression)]
    ';'       reduce using rule 18 (direct_declarator)
    ';'       [reduce using rule 86 (primary_expression)]
    '['       reduce using rule 18 (direct_declarator)
    ']'       reduce using rule 18 (direct_declarator)
    ']'       [reduce using rule 86 (primary_expression)]
    ','       reduce using rule 18 (direct_declarator)
    ','       [reduce using rule 86 (primary_expression)]
    '}'       reduce using rule 18 (direct_declarator)
    '}'       [reduce using rule 86 (primary_expression)]
    ':'       reduce using rule 18 (direct_declarator)
    ':'       [reduce using rule 86 (primary_expression)]
    '='       reduce using rule 18 (direct_declarator)
    $default  reduce using rule 86 (primary_expression)


State 38
